@@ -1,5 +1,12 @@
 2001-09-16  Kevin Vandersloot <kfv101@psu.edu>
 
+	* proctable.c: improve the search. Use strstr to search for
+	any instance of the search string. Also find the next match
+	when the same search string is used. Also make sure that
+	that the matching process is actually displayed.
+
+2001-09-16  Kevin Vandersloot <kfv101@psu.edu>
+
 	* procman.c: add new variable desktop_load_finish to monitor
 	the delay loading. Call pthrea_init here and do pthread_join
 	when the loading is done.
